corrected error for profile message to align with the input requirement

--- a/src/pages/input/input.scss
+++ b/src/pages/input/input.scss
@@ -29,3 +29,10 @@ page-input {
 ion-icon {
     font-size: 10px; //Preferred size here
 }
+
+.error {
+    font-weight: bold;
+    color: red;
+    text-align: center;
+    font-size: large;
+  }
